--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@
        display: flex;
        flex-direction: row;
        align-items: center;
+      width: 80px;
    }
 
    .result-container span {
