--- a/style.css
+++ b/style.css
@@ -56,6 +56,9 @@
 
    .result {
        position: relative;
+       display: flex;
+       justify-content: center;
+       align-items: center;
        width: 200px;
        border-color: black;
        margin-top: 20px;
