--- a/style.css
+++ b/style.css
@@ -218,6 +218,7 @@
     margin-right: 8rem;
 }
 #font-change select{
+    position: relative;
     padding: 10px;
     font-size: 1.0rem;
     font-family: 'Raleway', sans-serif;
